WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14051
<svg:image> fails to position correctly when <svg> is inside an inline <div>
https://bugs.webkit.org/show_bug.cgi?id=14051
Summary
<svg:image> fails to position correctly when <svg> is inside an inline <div>
Antoine Quint
Reported
2007-06-09 17:31:23 PDT
When positioned within a CSS inline block, it seems an SVG-rendered image element will not position itself appropriately, and thus not render on screen. This is not the case for absolutely-positioned elements or CSS-positioned elements with display: block.
Attachments
Testcase
(1.05 KB, application/xhtml+xml)
2007-06-09 17:31 PDT
,
Antoine Quint
no flags
Details
First attempt
(20.09 KB, patch)
2007-06-10 23:06 PDT
,
Rob Buis
eric
: review-
Details
Formatted Diff
Diff
slightly simpler test case (we should land other one however)
(435 bytes, application/xhtml+xml)
2007-06-11 06:51 PDT
,
Eric Seidel (no email)
no flags
Details
First attempt
(46.37 KB, patch)
2007-06-14 17:45 PDT
,
Rob Buis
eric
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2007-06-09 17:31:49 PDT
Created
attachment 14917
[details]
Testcase
Dave Hyatt
Comment 2
2007-06-09 17:35:11 PDT
inline-block means something else. These divs have been turned into straight-up inlines, so they're like spans. Just clarifying so that whoever investigates this doesn't get confused.
Rob Buis
Comment 3
2007-06-10 23:06:53 PDT
Created
attachment 14928
[details]
First attempt Discussed with Sam, probably worth having this at least for the testcase. Cheers, Rob.
Eric Seidel (no email)
Comment 4
2007-06-11 06:29:07 PDT
Comment on
attachment 14928
[details]
First attempt This is a nice fix, but for the wrong bug. This is a fix for
bug 14064
.
Eric Seidel (no email)
Comment 5
2007-06-11 06:51:13 PDT
Created
attachment 14934
[details]
slightly simpler test case (we should land other one however)
Eric Seidel (no email)
Comment 6
2007-06-11 06:56:55 PDT
This is yet another bug which will be made easier by fixing 12207. The only class in SVG which should ever have to care about tx/ty is SVGRenderRoot. All the rest should just be able to expect to be drawn relative to their SVG viewport, ignoring any html translations.
Rob Buis
Comment 7
2007-06-14 17:45:03 PDT
Created
attachment 15037
[details]
First attempt This should do it. Cheers, Rob.
Eric Seidel (no email)
Comment 8
2007-06-14 18:15:45 PDT
Comment on
attachment 15037
[details]
First attempt looks great. leave the parentx, parenty param names out so no one else is tempted to use them. or ASSERT that they're == 0.
Rob Buis
Comment 9
2007-06-16 23:33:27 PDT
Landed in
r23544
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug