        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=14051
        <svg:image> fails to position correctly when <svg> is inside an inline <div>

        Leave parent translation to the containers.



Canonical link: https://commits.webkit.org/20397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26407 268f45cc-cd09-0410-ab3c-d52691b4dbfc